Closes #90 (Page 404: big gap below the banner when the main menu is not fixed)

--- a/sass/lsx/_page_templates.scss
+++ b/sass/lsx/_page_templates.scss
@@ -213,11 +213,6 @@
 
 .error404 {
 	.wrap {
-		@media all and (max-width: 767px) {
-			margin-top: 60px;
-   			margin-bottom: 100px;
-		}
-
 		#primary {
 			width: 100%;
 
